kubernetes/manifests/nginx-ingress/templates/default-backend-service.yaml
---
# Source: nginx-ingress/templates/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.33.0
    component: "default-backend"
    heritage: Helm
    release: default
  name: default-nginx-ingress-default-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: nginx-ingress
    component: "default-backend"
    release: default
  type: "ClusterIP"
