kubernetes/manifests/nginx-ingress/templates/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    'kubernetes.io/ingress.class': nginx
  name: ingress
  namespace: default
spec:
  rules:
    - host: 6ddqdfk5rs.lb.c1.gra7.k8s.ovh.net
      http:
        paths:
          - backend:
              serviceName: hello-world-service
              servicePort: 80
            path: /
    - host: hello-again.mowdirect.co.uk
      http:
        paths:
          - backend:
              serviceName: hello-again-service
              servicePort: 80
            path: /
