kubernetes/manifests/nginx-ingress/templates/ingress-again.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    'kubernetes.io/ingress.class': nginx
  name: ingress
  namespace: acrossnamespace
spec:
  rules:
    - host: hello-again-again.mowdirect.co.uk
      http:
        paths:
          - backend:
              serviceName: hello-again-again-service
              servicePort: 80
            path: /
